@@ -4,6 +4,7 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 Derision: Old corpses summoned by Expedient Recovery will no longer rebury after 5 seconds.
 Derision: Added optional duration parameter to quest::popup.
 Trevius: SoF - Adventure Merchant Selling is now functional.
+Trevius: SoF - Items with click effects now show the min level required to click them.
 
 ==06/15/2009==
 Trevius: SoF - The following fields now show up on items that have values set for them, but the stats are not actually used by the server yet:
